--- a/WinkelAppProject/src/view/KlantGegevens.form
+++ b/WinkelAppProject/src/view/KlantGegevens.form
@@ -18,7 +18,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-56,0,0,4,123"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-56,0,0,5,-94"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -64,16 +64,24 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                           <Component id="jbOpslaan" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="64" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tfTussenvoegsel" max="32767" attributes="0"/>
-                              <Component id="tfNaam" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="tfNaam" pref="490" max="32767" attributes="0"/>
+                                      <Component id="tfTussenvoegsel" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
+                                  <Component id="tfTelefoonnummer" max="32767" attributes="0"/>
+                                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lTussenvoegselWijzigen" min="-2" max="-2" attributes="0"/>
                               <Component id="jbWachtwoordWijzigen" min="-2" max="-2" attributes="0"/>
@@ -87,18 +95,12 @@
                               <Component id="lEmailWijzigen" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <Component id="tfEmail" alignment="0" min="-2" pref="106" max="-2" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="tfAchternaam" alignment="0" pref="106" max="32767" attributes="0"/>
-                              <Component id="tfStraatnaam" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tfHuisnummer" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tfWoonplaats" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tfPostcode" alignment="0" max="32767" attributes="0"/>
-                              <Component id="tfTelefoonnummer" alignment="0" max="32767" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="214" pref="214" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="tfAchternaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Component id="tfStraatnaam" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Component id="tfHuisnummer" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Component id="tfWoonplaats" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Component id="tfPostcode" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
+                      <Component id="tfEmail" alignment="0" min="-2" pref="490" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="596" max="-2" attributes="0"/>
               </Group>
@@ -201,7 +203,7 @@
                       </Group>
                       <Component id="lEmailWijzigen" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="150" max="32767" attributes="0"/>
+                  <EmptySpace pref="135" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -428,7 +430,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="1147" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="1442" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
